src/assets/scss/modules/_footer.scss
.footer {
  font-family: PxGrotesk-Regular, Arial, sans-serif;
  background: #252525;
  color: $offWhite;

  .feedback {
    background: #000;
    text-align: center;
    height: 60px;
    line-height: 60px;
    font-size: 18px;

    .beta-tag {
      background: $pot;
      height: 22px;
      line-height: 22px;
      display: inline-block;
      color: #fff;
      font-size: 16px;
      border-radius: 3px;
      padding: 0 5px 0 5px;
      margin-right: 10px;
      font-family: PxGrotesk-Bold, Arial, sans-serif;

    }
    a {
      border-bottom: 2px solid $pot;
    }

    @include susy-breakpoint($bp-large, $susy) {
      height: 90px;
      line-height: 90px;
      font-size: 26px;

      .beta-tag {
        transform: translateY(-3px);
      }
    }
  }

  .content {
    max-width: 1800px;
    padding: 50px 0 0 0;
    overflow: auto;
    margin: auto;

    .general {
      padding: 0 6.25%;

      .contact-title {
        font-size: 24px;
        font-family: $PxGroteskRegular;
        text-transform: capitalize;
      }
      .contact-divider {
        border: 1px solid $offWhite;
        margin: 15px 0;
        width: 16px;
      }
      .email-cta {
        background: $offWhite;
        height: 40px;
        line-height: 40px;
        color: $nonBlack;
        font-size: 18px;
        padding: 0 35px 0 15px;
        margin: 0;
        display: inline-block;
        position: relative;
        margin-top: 2px;

        &:after {
          content: "";
          position: absolute;
          right: 10px;
          top: 50%;
          margin-top: -5px;
          background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="13" height="10" viewBox="0 0 13 10"><path d="M 0 0 L 7 10 L 13 0 Z" fill="#F9615B" /></svg>');
          background-position: 0 0;
          transform: rotate(180deg);
          width: 13px;
          height: 10px;
        }

        &:hover {
          border-bottom-color: $offWhite;
        }
      }
      .social {
        list-style: none;
        padding: 0;
        margin: 45px 0;
        overflow: auto;

        .channel {
          display: block;
          float: left;
          margin-right: 21px;
          background: $offWhite;

          &:last-child {
            margin-right: 0;
          }
          a {
            display: block;
            height: 35px;
            width: 35px;
            background-color: #777;
          }
          .logo {
            fill: #fff;
            width: 21px;
            height: 21px;
            margin: 7px;
          }
          .name {
            display: none;
          }

          &.facebook {
            a:hover {
              background-color: #3A5998;
            }
          }
          &.twitter {
            a:hover {
              background-color: #32ABE2;
            }
          }
          &.linkedin {
            a:hover {
              background-color: #069;
            }
          }
        }
      }
    }

    .studios {
      list-style: none;
      padding: 0;
      margin-top: 30px;
      border-top: 1px solid #333;
    }
    .copyright {
      padding-top: 60px;
      color: #999;
      text-align: center;
      clear: both;
      font-size: 12px;

      ul {
        padding: 30px 0;
        border-top: 1px solid #333;
        font-size: 12px;

        li {
          display: block;
          list-style-type: none;

          a {
            text-decoration: underline;
          }
        }
      }
    }
  }


  @include susy-breakpoint(650px, $susy) {
    .content {
      padding: 100px 0 0 0;
      padding-bottom: 0;

      .general {
        @include nested(16) {
          @include pre(1 of 16);
          @include span(5);
          vertical-align: top;
          position: relative;
          height: 150px;
          padding: 0;

          .contact-title {
            margin-bottom: 15px;
          }
          .contact-divider {
            display: none;
          }
          .social {
            .channel {
              margin-right: 15px;
            }
          }
        }
      }
      .studios {
        @include nested(16) {
          @include span(10);
          @include last;
          margin-top: 0;
          display: inline-block;
          vertical-align: top;
          border-top: none;
        }
      }
      .copyright {
        ul {
          margin: 0 6%;
        }
      }
    }
  }
  @include susy-breakpoint($bp-large, $susy) {
    .content {
      padding-bottom: 0;

      .general {
        @include nested(16) {
          @include span(3);
          height: 150px;
        }
      }
      .studios {
        @include nested(16) {
          @include span(12);
          @include last;
        }
      }
    }
  }
  @include susy-breakpoint($bp-larger, $susy) {
    .content {
      .copyright {
        ul {
          li {
            width: 33%;
            display: inline-block;
          }
        }
      }
    }
  }
}

